--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -224,6 +224,16 @@ fieldset:not(.polls) {
 	}
 }
 
+.section-mcp-approve-topic fieldset,
+.section-mcp-approve-post fieldset,
+.section-mcp-warnings .cp-main #warning ~,
+.section-ucp-send-password fieldset,
+.section-ucp-send-activation-email fieldset {
+	dl dt.empty-space {
+		display: none;
+	}
+}
+
 /* Auto Width Form Elements
 ========================================================================== */
 
