--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -1590,8 +1590,7 @@
 			.header_settings a {
 				font-size: 0;
 				&:before {
-					font-size: rem($global-font-size);
-					@include font-awesome;
+					@include font-awesome($fs: rem($global-font-size));
 					content: unicode($icon-cogs);
 				}
 			}
