--- a/khyeras/_dev/styles/khyeras_v1/template/overall_header.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_header.html
@@ -121,18 +121,7 @@
 			<!-- INCLUDE header_featured.html -->
 		<!-- ENDIF -->
 
-		<div class="wrapper">
-			<p>topics: {TOTAL_TOPICS}</p>
-			<p>posts: {TOTAL_POSTS}</p>
-			<p>total: {TOTAL}</p>
-			<p>users: {TOTAL_USERS}</p>
-			<p>reports: {TOTAL_REPORTS}</p>
-			<p>searches: {TOTAL_MATCHES}</p>
-			<p>attachments: {TOTAL_ATTACHMENTS}</p>
-			<p>notifications: {TOTAL_COUNT}</p>
-			<p>page number: {PAGE_NUMBER}</p>
-			<p>pm: {TOTAL_MESSAGES}</p>
-		</div>
+		<!-- INCLUDE body_classes.html -->
 
 		{% if navlinks|length > 0 %}
 			<nav id="nav-breadcrumbs" class="nav-breadcrumbs linklist navlinks" role="menubar">
