--- a/glowbug-forum/_dev/styles/glowbug_v1/theme/scss/_custom-variables.scss
+++ b/glowbug-forum/_dev/styles/glowbug_v1/theme/scss/_custom-variables.scss
@@ -8,6 +8,7 @@ $color-04: #444444; // blackish
 $color-05: #804080; // blue
 $color-06: #eeeeee; // gray
 $color-07: #dddddd; // gray
+$color-08: #f2f2f2; // gray
 
 // Fonts
 $font-01: 'Open Sans', Helvetica, Arial, sans-serif;
