--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -578,6 +578,9 @@
 			&[style*='width'] {
 				width: auto !important;
 			}
+			&[align='center'] {
+				text-align: left;
+			}
 			&.empty, strong + br {
 				display: none;
 			}
@@ -1556,6 +1559,7 @@
 		.action-bar.actions-jump .jumpbox {
 			display: block;
 			.dropdown {
+				width: 100%;
 				min-width: 1px;
 				left: 0;
 			}
@@ -1569,10 +1573,12 @@
 			}
 		}
 	}
-	.section-mcp-moderation-queue .cp-main .postbody .post-notice {
-		&.unapproved, &.deleted {
-			[class*='button'] + [class*='button'] {
-				margin-top: -15px;
+	.section-mcp-moderation-queue, .section-mcp-post-details {
+		.cp-main .postbody .post-notice {
+			&.unapproved, &.deleted {
+				[class*='button'] + [class*='button'] {
+					margin-top: -15px;
+				}
 			}
 		}
 	}
