Add major functionality for changing dropdown sizes on mobile during resize and toggle events

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -1064,6 +1064,14 @@
 	}
 
 	// layout.scss
+	.dropdown-container {
+		&.dropdown-visible, &.dropdown-left.dropdown-visible {
+			.dropdown {
+				min-width: 1px;
+				width: calc(100vw - 57px);
+			}
+		}
+	}
 	#nav-breadcrumbs ul li.home a {
 		.icon {
 			margin-right: 0;
