Clean up mobile dropdown query and restyle elements

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -87,7 +87,6 @@
 		display: block !important;
 		min-width: 160px;
 		position: absolute;
-		top: em(50px);
 		left: -999px;
 		z-index: -1;
 		margin: 0 !important;
@@ -127,13 +126,34 @@
 		z-index: 50;
 		left: 0;
 	}
-	&.dropdown-up .dropdown {
-		top: auto;
-		bottom: em(50px);
-	}
 	&.dropdown-left.dropdown-visible .dropdown {
 		left: auto;
 		right: 0;
+	}
+}
+
+.dropdown-container {
+	&.dropdown-down {
+		.dropdown {
+			top: 25px;
+		}
+		.button + .dropdown {
+			top: 45px;
+		}
+		.button-icon-only + .dropdown {
+			top: 30px;
+		}
+	}
+	&.dropdown-up {
+		.dropdown {
+			bottom: 25px;
+		}
+		.button + .dropdown {
+			bottom: 45px;
+		}
+		.button-icon-only + .dropdown {
+			bottom: 30px;
+		}
 	}
 }
 
