--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -1064,7 +1064,7 @@
 	}
 
 	// layout.scss
-	.dropdown-container {
+	.page-body .dropdown-container {
 		&.dropdown-visible, &.dropdown-left.dropdown-visible {
 			.dropdown {
 				min-width: 1px;
