--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_other-sections.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_other-sections.scss
@@ -89,7 +89,8 @@ dl.faq + .top {
 		visibility: visible;
 		opacity: 1;
 		z-index: 2;
-		left: 0;
+		left: -1px;
+		top: 45px;
 	}
 	.dropdown-contents.search-results li .search-result {
 		cursor: pointer;
