Fix styles for dropdowns and remove now unnecessary code

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -309,6 +309,7 @@
 #notification_list {
 	min-width: 450px;
 	top: 45px;
+	right: 2.5px;
 	.header {
 		@include spectral-common;
 		font-size: rem(18px);
